
  * Added property to allow conversion of proprietary DataObject DateHolder types
    into java.util.Dates.
    The default value for this property is 'true' which means default behaviour will 
    differ from 3.3
    
  * Removed need for constructor-arg on MBeanServer.
    
Bug Fixes
=========

SC28: JDBC PreparedStatement writers should not use setObject(null), but setNull().

  * Application now logs the jvm version near the beginning of adaptor 
    startup (in case adaptor dies before reporting it).
  * Modifying JDBC writers to use setNull() instead of setObject() where
    incoming parameter is null - it will break on Sybase.
 


=================================================
openadaptor3 production 3.3 Release Notes

See licences/licence.txt for Licence information.
=================================================

Date: 5th October 2007
Author: openadaptor Core Team

openadaptor 3.3
=======

Summary
=======
This is the third release of openadaptor 3

The openadaptor white paper can be downloaded from:

https://www.openadaptor.org/docs/whitepaper.pdf


This release focuses on stabilization. A number of areas have been reworked
or significantly enhanced.

==============================================================================

Major Changes
=============

This section details the main changes and enhancements in openadaptor 3.3

Documentation
=============

No major changes. Ongoing improvements to JavaDocs and to Examples.

Configuration
=============

No major changes. Some detail changes have been made to the configuration of 
individual components. See these separately for details.

Database
========

JDBC Read Connectors & Polling Read Connectors
----------------------------------------------

JDBC read connectors and polling read connectors have undergone a significant 
rework: 

  * The concept of an IPollingReadConnector that wraps another read connector 
    has been introduced. An IPollingReadConnector basically defines the way the 